Fix overflow issue from .quote-source-text
Set display to inline-block.

Cause:
Since the text is a block level element, the width equals the full
width of its container.
When adjusting its position, the empty space from its width causes
blank space to be present on the right.
In other words, the element is overflowing past its parent container.

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     --black-text-stroke: 1px rgb(0, 0, 0, 0.3);
 }
 
+* {
+    border: 1px red solid !important;
+}
+
 body {
     width: 100%;
     height: 100%;
@@ -239,6 +243,7 @@ img {
 }
 
 .quote-source-text {
+    display: inline-block;
     font-size: 1.5rem;
     font-weight: bold;
     color: #e5e7eb;
